--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/sebastianthomas/gou-date",
   "devDependencies": {
-    "gulp-jade": "~1.0.0",
     "gulp": "~3.8.11",
-    "gulp-less": "~3.0.1"
+    "gulp-concat": "^2.5.2",
+    "gulp-jade": "~1.0.0",
+    "gulp-less": "~3.0.1",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4"
   }
 }
